<resources>
    <string name="app_name">RealCamMI</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_repeat_mode" translatable="false">Cancelled repeat mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw" translatable="false">Failed to save RAW photo</string>
    <string name="failed_to_auto_stabilise">Failed to auto-level</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-level not supported\non this device</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="max_duration">Max duration</string>
    <string name="color_effect">Color effect</string>
    <string name="scene_mode">Scene mode</string>
    <string name="white_balance">White balance</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="failed_to_open_camera_1">FAILED TO Open Camera.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="iso">ISO</string>
    <string name="zoom">Zoom</string>
    <string name="free_memory">Free</string>
    <string name="screen_lock_message_1">[LOCKED:</string>
    <string name="screen_lock_message_2">Swipe to unlock]</string>
    <string name="failed_to_stamp">Failed to stamp info to photo</string>
    <string name="metres_abbreviation">m</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-level</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_opencv_sharpen" translatable="false">Sharpening (OpenCV)</string>
    <string name="preference_opencv_sharpen_summary" translatable="false">Applies adaptive Unsharp Mask sharpening to each photo after capture. Enhances fine detail without colour fringing. Applied after noise reduction.</string>
    <string name="preference_opencv_nr" translatable="false">Noise reduction (OpenCV)</string>
    <string name="preference_opencv_nr_summary" translatable="false">Applies Bilateral Filter noise reduction to each photo after capture. Smooths flat areas while preserving edges. Applied before sharpening.</string>
    <string name="preference_opencv_clahe" translatable="false">Contrast enhancement (OpenCV)</string>
    <string name="preference_opencv_clahe_summary" translatable="false">Applies CLAHE (Contrast Limited Adaptive Histogram Equalisation) to improve local contrast. Dark areas gain more detail without blowing out highlights.</string>
    <string name="preference_opencv_blur_detect" translatable="false">Blur detection (OpenCV)</string>
    <string name="preference_opencv_blur_detect_summary" translatable="false">Analyses each photo after capture and shows a warning if it appears blurry. Uses Laplacian variance to detect lack of sharpness.</string>
    <string name="preference_show_opencv_sharpen" translatable="false">Show sharpening icon</string>
    <string name="preference_show_opencv_sharpen_summary" translatable="false">Whether to show an on-screen icon to enable or disable OpenCV adaptive sharpening.</string>
    <string name="preference_show_opencv_nr" translatable="false">Show noise reduction icon</string>
    <string name="preference_show_opencv_nr_summary" translatable="false">Whether to show an on-screen icon to enable or disable OpenCV bilateral noise reduction.</string>
    <string name="preference_show_opencv_clahe" translatable="false">Show contrast enhancement icon</string>
    <string name="preference_show_opencv_clahe_summary" translatable="false">Whether to show an on-screen icon to enable or disable OpenCV CLAHE contrast enhancement.</string>
    <string name="preference_show_opencv_blur_detect" translatable="false">Show blur detection icon</string>
    <string name="preference_show_opencv_blur_detect_summary" translatable="false">Whether to show an on-screen icon to enable or disable OpenCV blur detection warnings.</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation\n%s</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for repeat mode delay</string>
    <string name="preference_timer_speak" translatable="false">Voice timer countdown</string>
    <string name="preference_timer_speak_summary" translatable="false">Speak the countdown for timer or repeat mode delay (from 60 seconds)</string>
    <string name="preference_burst_mode">Repeat</string>
    <string name="preference_burst_interval">Repeat mode interval</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_touch_capture" translatable="false">Touch to capture</string>
    <string name="preference_touch_capture_summary" translatable="false">Take a photo or record video just by touching or double-tapping the preview\n%s</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_audio_control" translatable="false">Audio control options</string>
    <string name="preference_audio_noise_control_sensitivity" translatable="false">Audio control sensitivity</string>
    <string name="preference_audio_noise_control_sensitivity_summary" translatable="false">Noise level sensitivity for audio (loud noise) option\n%s</string>
    <string name="preference_save_location">Save location</string>
    <string name="preference_save_location_summary">Folder to save the photo/video files in</string>
    <string name="preference_using_saf" translatable="false">Storage Access Framework</string>
    <string name="preference_using_saf_summary" translatable="false">Whether to use Storage Access Framework for saving photos and videos. This should be enabled to allow saving to external SD cards. On Android 10+ this option must be enabled if you want to save in a folder outside of DCIM.</string>
    <string name="preference_save_photo_prefix">Save photo prefix</string>
    <string name="preference_save_photo_prefix_summary">The prefix to use for the save filenames for photos</string>
    <string name="preference_save_video_prefix">Save video prefix</string>
    <string name="preference_antibanding" translatable="false">Anti-banding</string>
    <string name="preference_antibanding_summary" translatable="false">Algorithms to help with light flickering.\n%s</string>
    <string name="preference_edge_mode" translatable="false">Edge mode algorithm</string>
    <string name="preference_edge_mode_summary" translatable="false">Algorithm that the camera driver should use for applying edge enhancement. Edge enhancement improves sharpness and details in the captured image. (This setting is ignored in NR photo mode.)\n%s</string>
    <string name="preference_noise_reduction_mode" translatable="false">Noise reduction algorithm</string>
    <string name="preference_noise_reduction_mode_summary" translatable="false">Camera driver algorithm to reduce digital noise from the capture process, especially in low-light environments. This setting is ignored in photo NR mode.\n%s</string>
</resources>